[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
default-run = "zero2prod"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
serde_json = "1"
tracing-log = "0.2.0"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
validator = "0.16"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.65"
anyhow = "1.0.91"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claim = "0.5"
fake = "2"
wiremock = "0.6"
linkify = "0.10"
serde_urlencoded = "0.7"
